# SDEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  out.cereal  test.scene
Apps/SDEditor/: CMakeLists.txt
Apps/SDEditor/include/: AnimationEditor.hpp  CameraController.hpp  ContentBrowser.hpp  EditorCamera.hpp  EditorCameraSystem.hpp  EditorEvent.hpp  EditorLayer.hpp  GridRenderer.hpp  ProfileSystem.hpp  SDEditor.hpp  Sandbox2DLayer.hpp  ScenePanel.hpp  TileBrush.hpp  TileMapEditor.hpp  TileMapSystem.hpp
Apps/SDEditor/src/: AnimationEditor.cpp  CameraController.cpp  ContentBrowser.cpp  EditorCamera.cpp  EditorCameraSystem.cpp  EditorLayer.cpp  GridRenderer.cpp  ProfileSystem.cpp  SDEditor.cpp  Sandbox2DLayer.cpp  ScenePanel.cpp  TileBrush.cpp  TileMapEditor.cpp  TileMapSystem.cpp
Engine/: CMakeLists.txt
Engine/include/Asset/: Asset.hpp  AssetManager.hpp  Bitmap.hpp  BitmapLoader.hpp  Export.hpp  Font.hpp  FontLoader.hpp  Image.hpp  ImageLoader.hpp  Model.hpp  ModelLoader.hpp  ShaderLoader.hpp
Engine/include/Common/: Assert.hpp  Base.hpp  Config.hpp  Export.hpp  Log.hpp  PlatformDetection.hpp  Serialize.hpp
Engine/include/Core/: Action.hpp  ActionMap.hpp  ActionTarget.hpp  Application.hpp  Assert.hpp  Base.hpp  Config.hpp  Context.hpp  EntryPoint.hpp  Event.hpp  EventDispatcher.hpp  EventStack.hpp  Export.hpp  GLContext.hpp  ImGuiLayer.hpp  Input.hpp  InputEngine.hpp  InputManager.hpp  Keyboard.hpp  Keycode.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  RenderEngine.hpp  SDL.hpp  Scancode.hpp  System.hpp  Timing.hpp  Transform.hpp  Vars.hpp  Window.hpp
Engine/include/ECS/: Component.hpp  Entity.hpp  Export.hpp  ParticleSystem.hpp  RenderSystem.hpp  Scene.hpp  System.hpp  TerrainSystem.hpp
Engine/include/Graphics/: Buffer.hpp  BufferLayout.hpp  Camera.hpp  Context.hpp  Device.hpp  Export.hpp  Font.hpp  Framebuffer.hpp  Graphics.hpp  GraphicsDefine.hpp  GraphicsManager.hpp  Light.hpp  Material.hpp  MaterialLoader.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  RenderTarget.hpp  Renderer.hpp  Renderer2D.hpp  Renderer3D.hpp  RendererAPI.hpp  Shader.hpp  ShaderLoader.hpp  ShadowMap.hpp  Terrain.hpp  Texture.hpp  TextureLoader.hpp  Translator.hpp  VertexArray.hpp  Viewport.hpp
Engine/include/ImGui/: Export.hpp  FileDialog.hpp  ImGuiLayer.hpp  ImGuiWidget.hpp
Engine/include/Input/: Action.hpp  ActionMap.hpp  ActionTarget.hpp  Input.hpp  InputEngine.hpp
Engine/include/Layers/: ImGuiLayer.hpp
Engine/include/Loader/: Export.hpp  FontLoader.hpp  ImageLoader.hpp  ModelLoader.hpp  ShaderLoader.hpp  SkyboxLoader.hpp
Engine/include/Renderer/: Bitmap.hpp  BitmapLoader.hpp  Camera.hpp  Export.hpp  Font.hpp  FontLoader.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  ParticleSystem.hpp  RenderEngine.hpp  RenderSystem.hpp  RenderTarget.hpp  Renderer.hpp  Renderer2D.hpp  Renderer3D.hpp  Skybox.hpp  SkyboxLoader.hpp  Sprite.hpp  SpriteLoader.hpp  Terrain.hpp
Engine/include/System/: CameraSystem.hpp  Event.hpp  Export.hpp  LightingSystem.hpp  ParticleSystem.hpp  PostProcessSystem.hpp  ProfileSystem.hpp  RenderSystem.hpp  ShadowSystem.hpp  SkyboxSystem.hpp  SpriteRenderSystem.hpp  System.hpp  TerrainSystem.hpp  TileMapSystem.hpp
Engine/include/TileMap/: Export.hpp  Sprite.hpp  Tile.hpp  TileCanvas.hpp  TileLayout.hpp  TileMap.hpp  TileMapLoader.hpp
Engine/include/Utility/: Assert.hpp  Base.hpp  BlockingQueue.hpp  Config.hpp  EventDispatcher.hpp  EventStack.hpp  Exception.hpp  Export.hpp  File.hpp  Image.hpp  Ini.hpp  IniParser.hpp  Log.hpp  Math.hpp  QuadTree.hpp  Random.hpp  ResourceId.hpp  SDLHelper.hpp  Serialize.hpp  String.hpp  ThreadPool.hpp  Timing.hpp  Transform.hpp
Engine/include/Utils/: Assert.hpp  AssetLoader.hpp  AssetManager.hpp  Base.hpp  Config.hpp  Export.hpp  File.hpp  Log.hpp  Math.hpp  QuadTree.hpp  Random.hpp  Serialize.hpp  Transform.hpp
Engine/src/Asset/: Asset.cpp  AssetManager.cpp  Bitmap.cpp  BitmapLoader.cpp  CMakeLists.txt  Font.cpp  FontLoader.cpp  Image.cpp  ImageLoader.cpp  Model.cpp  ModelLoader.cpp  ShaderLoader.cpp
Engine/src/Common/: CMakeLists.txt  Log.cpp
Engine/src/Core/: Action.cpp  Application.cpp  CMakeLists.txt  Context.cpp  EntryPoint.cpp  GLContext.cpp  ImGuiLayer.cpp  Input.cpp  InputEngine.cpp  InputManager.cpp  Keyboard.cpp  Layer.cpp  LayerStack.cpp  RenderEngine.cpp  System.cpp  Timing.cpp  Transform.cpp  Vars.cpp  Window.cpp
Engine/src/ECS/: CMakeLists.txt  Component.cpp  Entity.cpp  ParticleSystem.cpp  RenderSystem.cpp  Scene.cpp  System.cpp  TerrainSystem.cpp
Engine/src/Graphics/: Buffer.cpp  BufferLayout.cpp  CMakeLists.txt  Camera.cpp  Device.cpp  Font.cpp  Framebuffer.cpp  Graphics.cpp  Light.cpp  Material.cpp  MaterialLoader.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  RenderTarget.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  RendererAPI.cpp  Shader.cpp  ShaderLoader.cpp  ShadowMap.cpp  Terrain.cpp  Texture.cpp  TextureLoader.cpp  VertexArray.cpp  Viewport.cpp
Engine/src/ImGui/: CMakeLists.txt  FileDialog.cpp  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiWidget.cpp  imgui_impl_sdl.cpp
Engine/src/Input/: Action.cpp  CMakeLists.txt  Input.cpp  InputEngine.cpp
Engine/src/Layers/: CMakeLists.txt  ImGuiLayer.cpp  imgui_impl_sdl.h
Engine/src/Loader/: BitmapLoader.cpp  CMakeLists.txt  FontLoader.cpp  ImageLoader.cpp  ModelLoader.cpp  ShaderLoader.cpp  SkyboxLoader.cpp  SpriteLoader.cpp
Engine/src/Renderer/: Bitmap.cpp  BitmapLoader.cpp  CMakeLists.txt  Camera.cpp  Font.cpp  FontLoader.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  ParticleSystem.cpp  ProfileSystem.cpp  RenderEngine.cpp  RenderSystem.cpp  RenderTarget.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  ShadowSystem.cpp  Skybox.cpp  SkyboxLoader.cpp  Sprite.cpp  SpriteLoader.cpp  Terrain.cpp  TerrainSystem.cpp
Engine/src/System/: CMakeLists.txt  CameraSystem.cpp  LightingSystem.cpp  ParticleSystem.cpp  PostProcessSystem.cpp  (+8 more)
SDEngine/: CMakeLists.txt
src/Core/: Application.cpp  CMakeLists.txt  Engine.cpp  EntryPoint.cpp  GLContext.cpp  Log.cpp  Timing.cpp  Transform.cpp  Window.cpp
(+512 files in other folders)
